[gd_scene load_steps=10 format=3 uid="uid://2wap0283yk0r"]

[ext_resource type="Script" uid="uid://cc8n3086pvl18" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://ceuu150fmggvr" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://defdm2qdva75q" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c6kxmlol2vbey" path="res://hud.tscn" id="4_1bvp3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0xm2m"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_h2yge"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lquwl"]
albedo_color = Color(0.8836626, 0.29321513, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7mycd"]
material = SubResource("StandardMaterial3D_lquwl")

[sub_resource type="Curve3D" id="Curve3D_272bh"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 29, 0, -18, 0, 0, 0, 0, 0, 0, 15, 0, 20, 0, 0, 0, 0, 0, 0, -15, 0, 20, 0, 0, 0, 0, 0, 0, -29, 0, -18),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_1bvp3")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_0xm2m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_h2yge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.56128824, -0.06540796, -0.82503164, -0.100124985, -0.9949167, 0.010758936, -0.8215415, 0.07656753, -0.5649841, 0, 0, 0)
light_color = Color(0.81591254, 0.31053698, 0.18149629, 1)
light_energy = 5.0
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0, 0, 0)
gizmo_extents = 0.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.4226182, 0.90630776, 0, -0.90630776, 0.4226182, 0, 16.742142, 15.640858)

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, -18)
mesh = SubResource("CylinderMesh_7mycd")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 20)
mesh = SubResource("CylinderMesh_7mycd")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 20)
mesh = SubResource("CylinderMesh_7mycd")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29, 0, -18)
mesh = SubResource("CylinderMesh_7mycd")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_272bh")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.93834317, 0, 0.34570527, 0, 1, 0, -0.34570527, 0, -0.93834317, 29, 0, -18)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Hud" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="squish" from="Player" to="." method="_on_player_squish"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
